# ppr.2-zbs

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  matrix.cpp  matrix.hpp  parallel_job.sh  serial_job.sh
cmake/: FindGMP.cmake  FindTclap.cmake
data/: graph.txt  graph60.txt
report/: graph.gcx  report.tex
report/benchmarks/g35a11 - 5min/: 01  02  04  08  12  16  20  24
report/benchmarks/g35a12 - 10min/: 01  02  04  08  12  16  20  24
report/benchmarks/g35a13 - 15min/: 01  02  04  08  12  16  20  24
src/: main.cpp  matrix.cpp  matrix.hpp
